Don't record the location for replies. Instead ask for it when sending messages.